idf_component_register(SRCS 
                        "main.c" 
                        "cc1101/cc1101.c"
                        "spi_communication/spi_communication.c"
                    INCLUDE_DIRS 
                        ""
                        "cc1101"
                        "spi_communication")
